unpackaged/pre/first/objects/Church_School_Partnership__c.object
<CustomObject>
    <fields>
        <fullName>CSP_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSP Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSP_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSP Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Church School Partnerships</relationshipLabel>
        <relationshipName>Church_School_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Church_Account__c</fullName>
        <label>Church</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Church School Partnerships</relationshipLabel>
        <relationshipName>Church_School_Partnerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Church_Name_School_Name__c</fullName>
        <formula>Church_Account__r.Name &amp;&quot; - &quot;&amp;  School_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Church Name - School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Church_Name__c</fullName>
        <formula>Church_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Church Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Church_Network__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Church Network</label>
        <referenceTo>Church_Network__c</referenceTo>
        <relationshipName>Church_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Church_School_Distance__c</fullName>
        <formula>DISTANCE(GEOLOCATION(Church_Account__r.BillingLatitude  , Church_Account__r.BillingLongitude ),     GEOLOCATION( School_Account__r.BillingLatitude ,School_Account__r.BillingLongitude  )    , &apos;mi&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Church School Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Church__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Church_ARCHIVED</label>
        <referenceTo>Church__c</referenceTo>
        <relationshipLabel>Church School Partnerships</relationshipLabel>
        <relationshipName>Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collaborators_on_Campus__c</fullName>
        <label>Collaborators on Campus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Collected__c</fullName>
        <label>Communication Collected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Story</fullName>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Podcast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Discovered__c</fullName>
        <label>Date Discovered/Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Network_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Network Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Contact_Date__c</fullName>
        <inlineHelpText>Date that contact was first initiated</inlineHelpText>
        <label>First Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the church would like to remain anonymous on all public platforms, check this box</inlineHelpText>
        <label>Keep Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH_Affiliated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this partnership affiliated with Loving Houston in some way?</inlineHelpText>
        <label>LH Affiliated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH_Affiliation__c</fullName>
        <description>How this partnership has been impacted by Loving Houston.</description>
        <inlineHelpText>How has this partnership been impacted by Loving Houston?</inlineHelpText>
        <label>LH Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH_Other_Partnership_Activities__c</fullName>
        <inlineHelpText>What other partnership activities have been impacted by Loving Houston?</inlineHelpText>
        <label>LH Other Partnership Activities</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LH_Partnership_Activities__c</fullName>
        <inlineHelpText>Which partnership activities have been impacted by Loving Houston?</inlineHelpText>
        <label>LH Partnership Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After-School Programs</fullName>
                </value>
                <value>
                    <fullName>Book Drives</fullName>
                </value>
                <value>
                    <fullName>Christmas Gifts</fullName>
                </value>
                <value>
                    <fullName>Clothing Drives</fullName>
                </value>
                <value>
                    <fullName>College Prep Assistance</fullName>
                </value>
                <value>
                    <fullName>Communities in Service</fullName>
                </value>
                <value>
                    <fullName>ESL Training</fullName>
                </value>
                <value>
                    <fullName>Facilities Usage</fullName>
                </value>
                <value>
                    <fullName>Field Trips/Internships</fullName>
                </value>
                <value>
                    <fullName>Financial Support</fullName>
                </value>
                <value>
                    <fullName>Food Drives</fullName>
                </value>
                <value>
                    <fullName>GED Support</fullName>
                </value>
                <value>
                    <fullName>Guest Speakers</fullName>
                </value>
                <value>
                    <fullName>In-Kind Donations</fullName>
                </value>
                <value>
                    <fullName>Kids Hope Mentoring</fullName>
                </value>
                <value>
                    <fullName>Literacy Help</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Parent Engagement &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Prayer</fullName>
                </value>
                <value>
                    <fullName>PTO Support</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Student Ministry</fullName>
                </value>
                <value>
                    <fullName>Teacher Support &amp; Appreciation</fullName>
                </value>
                <value>
                    <fullName>Tutoring</fullName>
                </value>
                <value>
                    <fullName>WatchDogs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LH_Role__c</fullName>
        <label>LH Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                    <color>#FFCC66</color>
                    <label>Started</label>
                </value>
                <value>
                    <fullName>Expanded</fullName>
                    <color>#CC66CC</color>
                    <label>Expanded</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <color>#999999</color>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LH_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LH Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_CSP_Activity_Date__c</fullName>
        <inlineHelpText>Created date of the last Partnership Hour record</inlineHelpText>
        <label>Last Partnership Update Submitted</label>
        <summarizedField>Partnership_Hour__c.CreatedDate</summarizedField>
        <summaryForeignKey>Partnership_Hour__c.Church_School_Partnership__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Partnership_Update_Submitted__c</fullName>
        <description>DLRS Rollup Year field of the most recent Partnership Hours record submitted</description>
        <label>Latest Partnership Update Submitted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Literacy__c</fullName>
        <label>Literacy</label>
        <summaryFilterItems>
            <field>Partnership_Hour__c.Literacy__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Partnership_Hour__c.Church_School_Partnership__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mentoring__c</fullName>
        <label>Mentoring</label>
        <summaryFilterItems>
            <field>Partnership_Hour__c.Mentoring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Partnership_Hour__c.Church_School_Partnership__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Network_District_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network District Partnership</label>
        <referenceTo>Network_District_Partnership__c</referenceTo>
        <relationshipLabel>Church School Partnerships</relationshipLabel>
        <relationshipName>Church_School_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Partnership_Activities__c</fullName>
        <label>Other Partnership Activities</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parents__c</fullName>
        <label>Parents</label>
        <summaryFilterItems>
            <field>Partnership_Hour__c.Parents__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Partnership_Hour__c.Church_School_Partnership__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partnership_Activities__c</fullName>
        <label>Partnership Activities_ARCHIVED</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After-School Programs</fullName>
                </value>
                <value>
                    <fullName>Book Drives</fullName>
                </value>
                <value>
                    <fullName>Christmas Gifts</fullName>
                </value>
                <value>
                    <fullName>Clothing Drives</fullName>
                </value>
                <value>
                    <fullName>College Prep Assistance</fullName>
                </value>
                <value>
                    <fullName>Communities in Service</fullName>
                </value>
                <value>
                    <fullName>ESL Training</fullName>
                </value>
                <value>
                    <fullName>Facilities Usage</fullName>
                </value>
                <value>
                    <fullName>Field Trips/Internships</fullName>
                </value>
                <value>
                    <fullName>Financial Support</fullName>
                </value>
                <value>
                    <fullName>Food Drives</fullName>
                </value>
                <value>
                    <fullName>GED Support</fullName>
                </value>
                <value>
                    <fullName>Guest Speakers</fullName>
                </value>
                <value>
                    <fullName>In-Kind Donations</fullName>
                </value>
                <value>
                    <fullName>KEYS Mentoring</fullName>
                </value>
                <value>
                    <fullName>Kids Hope Mentoring</fullName>
                </value>
                <value>
                    <fullName>Literacy Help</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Parent Engagement &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Prayer</fullName>
                </value>
                <value>
                    <fullName>PTO Support</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
                <value>
                    <fullName>School Supply Drives</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Student Ministry</fullName>
                </value>
                <value>
                    <fullName>Teacher Support &amp; Appreciation</fullName>
                </value>
                <value>
                    <fullName>Tutoring</fullName>
                </value>
                <value>
                    <fullName>WatchDogs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Activity_Summary__c</fullName>
        <formula>IF( Mentoring__c &gt; 0, &quot;Mentoring;&quot;, &quot;&quot;)&amp;
IF( Literacy__c &gt; 0, &quot;Literacy;&quot;, &quot;&quot;)&amp;
IF( Parents__c &gt; 0, &quot;Parent;&quot;, &quot;&quot;)&amp;
IF( Teachers__c &gt; 0, &quot;Teachers&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partnership Activity Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Discovered__c</fullName>
        <formula>IF(ISBLANK(Date_Discovered__c),
&quot;&quot;,
IF(
AND(MONTH(Date_Discovered__c)&gt;0,MONTH(Date_Discovered__c)&lt;4),
&quot;Q1 - &quot;,
IF(
AND(MONTH(Date_Discovered__c)&gt;3,MONTH(Date_Discovered__c)&lt;7),
&quot;Q2 - &quot;,
IF(
AND(MONTH(Date_Discovered__c)&gt;6,MONTH(Date_Discovered__c)&lt;10),
&quot;Q3 - &quot;,
IF(
AND(MONTH(Date_Discovered__c)&gt;9,MONTH(Date_Discovered__c)&lt;13),
&quot;Q4 - &quot;,
&quot;&quot;
))))+TEXT(YEAR(Date_Discovered__c))
)</formula>
        <label>Quarter Discovered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_District__c</fullName>
        <formula>School_Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <formula>School_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School_ARCHIVED</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Church School Partnerships</relationshipLabel>
        <relationshipName>Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Status__c</fullName>
        <label>Secondary Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <color>#419249</color>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <color>#BBBBBB</color>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Potential</fullName>
                    <color>#A845DC</color>
                    <label>Potential</label>
                </value>
                <value>
                    <fullName>Google-Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teachers__c</fullName>
        <label>Teachers</label>
        <summaryFilterItems>
            <field>Partnership_Hour__c.Teachers__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Partnership_Hour__c.Church_School_Partnership__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_to_Partnership__c</fullName>
        <formula>(BLANKVALUE( Date_Discovered__c , TODAY())-  First_Contact_Date__c ) /7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of weeks between first contact date and date discovered (or today if date discovered is blank)</inlineHelpText>
        <label>Time to Partnership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volunteer_Hours__c</fullName>
        <label>Total Volunteer Hours</label>
        <summarizedField>Partnership_Hour__c.Total_Volunteer_Hours__c</summarizedField>
        <summaryForeignKey>Partnership_Hour__c.Church_School_Partnership__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Volunteers__c</fullName>
        <label>Total Volunteers</label>
        <summarizedField>Partnership_Hour__c.Total_Volunteers__c</summarizedField>
        <summaryForeignKey>Partnership_Hour__c.Church_School_Partnership__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_Started__c</fullName>
        <label>Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Church School Partnership</label>
    <listViews>
        <fullName>Active_Partnerships</fullName>
        <columns>NAME</columns>
        <columns>School_District__c</columns>
        <columns>Church_Account__c</columns>
        <columns>School_Account__c</columns>
        <columns>Last_CSP_Activity_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>School_District__c</field>
            <operation>equals</operation>
            <value>Fort Bend ISD</value>
        </filters>
        <label>Active Partnerships</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Church_Name__c</columns>
        <columns>School_Account__c</columns>
        <columns>LH_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSP-{0000}</displayFormat>
        <label>Partnership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Church School Partnerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>